test: apply OpenRewrite JUnit migration